# seimi-render

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md
.github/workflows/: release.yml
admin-ui/: app.css  app.js  docs.js  gen_favicon.py  i18n.js  index.html
chrome-extension/: README.md  i18n.js  manifest.json  popup.css  popup.html  popup.js
chrome-extension/_locales/en/: messages.json
chrome-extension/_locales/zh_CN/: messages.json
cmake/: MacOSXBundleInfo.plist.in
docs/: README.en.md  architecture.drawio  architecture.en.drawio
docs/superpowers/plans/: 2026-06-28-regression-test.md  2026-07-01-baidu-serp-extraction.md  2026-07-05-env-info-card.md
docs/superpowers/specs/: 2026-06-28-regression-test-design.md  2026-07-01-baidu-serp-extraction-design.md  2026-07-05-env-info-card-design.md
scripts/: _fetch_url_pool.py  _install_qt_module.sh  build-linux.sh  build-windows.bat  check-deps.bat  check-deps.ps1  check-resources.bat  package-linux.sh  package-windows.bat  package.sh  regression_test.py  setup-linux.sh  setup-macos.sh  setup-windows.bat  smoke_test.sh  soak_test.py  start-windows.bat
src/: BlockDetect.h  CookieStore.cpp  CookieStore.h  Environment.cpp  Environment.h  HttpServer.cpp  HttpServer.h  IpNet.h  McpServer.cpp  McpServer.h  Metrics.cpp  Metrics.h  ProxyConfig.cpp  ProxyConfig.h  RenderPool.cpp  RenderPool.h  RenderQueue.cpp  RenderQueue.h  RenderTask.h  SsrfInterceptor.h  StealthProfile.h  TokenCompare.h  UrlGuard.h  WsServer.cpp  WsServer.h  main.cpp
